--- a/src/main/resources/edu/wpi/teamb/views/Home.fxml
+++ b/src/main/resources/edu/wpi/teamb/views/Home.fxml
@@ -16,6 +16,8 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #272523;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamb.controllers.HomeController">
    <center>
@@ -29,6 +31,12 @@
             </ImageView>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7089a2" height="586.0" layoutX="-23.0" layoutY="84.0" stroke="#ffffff00" strokeType="INSIDE" width="1100.0" />
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#012d5a" height="50.0" layoutX="-162.0" stroke="TRANSPARENT" strokeType="INSIDE" width="1347.0" />
+            <Text fill="WHITE" layoutX="-21.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Dashboard" textAlignment="CENTER" wrappingWidth="1164.103515625">
+               <font>
+                  <Font name="System Bold" size="36.0" />
+               </font>
+            </Text>
+            <VBox fx:id="vboxActivateNav" layoutX="-170.0" onMouseEntered="#activateNav" prefHeight="720.0" prefWidth="70.0" />
             <Pane fx:id="homePane" prefHeight="691.0" prefWidth="1067.0">
                <children>
                   <MFXButton fx:id="btnCredits" layoutX="915.0" layoutY="633.0" mnemonicParsing="false" text="Credits" />
@@ -36,9 +44,9 @@
                   <MFXButton fx:id="btnClear" layoutX="833.0" layoutY="645.0" mnemonicParsing="false" text="Clear" visible="false" />
                   <MFXButton fx:id="btnSecret" layoutX="830.0" layoutY="633.0" mnemonicParsing="false" text="Secret" />
                   <MFXButton fx:id="viewUserRequestButton" layoutX="843.0" layoutY="107.0" prefHeight="50.0" prefWidth="200.0" text="View My Requests" />
+                  <VBox fx:id="vboxActivateNav1" layoutX="-52.0" layoutY="10.0" onMouseClicked="#deactivateNav" prefHeight="720.0" prefWidth="1162.0" visible="false" />
                   <JFXDrawersStack layoutX="14.0" layoutY="230.0" prefHeight="63.0" prefWidth="85.0" />
                   <TableView fx:id="alertsTable" layoutX="22.0" layoutY="318.0" prefHeight="328.0" prefWidth="340.0" />
-                  <VBox fx:id="vboxWelcomeBack" alignment="TOP_CENTER" layoutX="240.0" prefHeight="53.0" prefWidth="500.0" />
                </children></Pane>
             <ImageView fitHeight="88.0" fitWidth="350.0" layoutX="414.0" layoutY="596.0" pickOnBounds="true">
                <image>
@@ -54,7 +62,6 @@
                   </Lighting>
                </effect>
             </ImageView>
-            <VBox fx:id="vboxActivateNav" layoutX="-150.0" onMouseEntered="#activateNav" prefHeight="720.0" prefWidth="70.0" />
          </children>
       </AnchorPane>
    </center>
@@ -66,7 +73,6 @@
                <effect>
                   <ColorAdjust brightness="1.0" />
                </effect></JFXHamburger>
-            <VBox fx:id="vboxActivateNav1" layoutX="70.0" onMouseEntered="#deactivateNav" prefHeight="720.0" prefWidth="20.0" />
          </children>
       </Pane>
    </left>
