--- a/src/main/resources/edu/wpi/teamb/views/signage/Signage.fxml
+++ b/src/main/resources/edu/wpi/teamb/views/signage/Signage.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXDrawer?>
 <?import com.jfoenix.controls.JFXHamburger?>
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import io.github.palexdev.materialfx.controls.MFXComboBox?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.effect.ColorAdjust?>
@@ -47,6 +48,7 @@
                   <Font name="System Bold" size="23.0" />
                </font>
             </Text>
+            <MFXButton fx:id="btnSignageForm" layoutX="24.0" layoutY="164.0" text="Modify Signs" />
         </children>
     </AnchorPane>
     </center>
