--- a/src/main/resources/edu/wpi/teamb/views/SignageForm.fxml
+++ b/src/main/resources/edu/wpi/teamb/views/SignageForm.fxml
@@ -23,15 +23,16 @@
             </font>
         </Text>
         <VBox layoutX="26.0" layoutY="319.0" prefHeight="285.0" prefWidth="125.0" />
-        <Pane layoutX="103.0" layoutY="61.0" prefHeight="265.0" prefWidth="616.0">
+        <Pane layoutX="103.0" layoutY="62.0" prefHeight="265.0" prefWidth="616.0">
          <children>
-            <MFXFilterComboBox fx:id="sign1" layoutX="27.0" layoutY="79.0" prefHeight="50.0" prefWidth="430.0" text="Location Name" />
-            <MFXButton fx:id="submit" layoutX="495.0" layoutY="223.0" text="Submit Changes" />
+            <MFXFilterComboBox fx:id="locationBox" layoutX="27.0" layoutY="79.0" prefHeight="50.0" prefWidth="430.0" text="Location Name" />
+            <MFXButton fx:id="btnSubmit" layoutX="495.0" layoutY="223.0" text="Submit Changes" />
             <MFXComboBox fx:id="signageGroupBox" layoutX="27.0" layoutY="14.0" prefHeight="48.0" prefWidth="342.0" text="Signage Group" />
-            <MFXDatePicker fx:id="startDatePicker1" layoutX="27.0" layoutY="141.0" prefHeight="38.0" prefWidth="267.0" text="Start Date" />
-            <MFXDatePicker fx:id="endDatePicker1" layoutX="314.0" layoutY="141.0" prefHeight="38.0" prefWidth="273.0" text="End Date" />
-            <MFXComboBox layoutX="469.0" layoutY="79.0" prefHeight="50.0" prefWidth="118.0" text="Direction" />
+            <MFXDatePicker fx:id="startDatePicker" layoutX="27.0" layoutY="141.0" prefHeight="38.0" prefWidth="267.0" text="Start Date" />
+            <MFXDatePicker fx:id="endDatePicker" layoutX="314.0" layoutY="141.0" prefHeight="38.0" prefWidth="273.0" text="End Date" />
+            <MFXComboBox fx:id="directionBox" layoutX="469.0" layoutY="79.0" prefHeight="50.0" prefWidth="118.0" text="Direction" />
               <MFXButton fx:id="btnClose" layoutX="27.0" layoutY="223.0" mnemonicParsing="false" text="Close" />
+            <MFXComboBox layoutX="390.0" layoutY="14.0" prefHeight="48.0" prefWidth="159.0" text="Sign Slot" />
          </children></Pane>
     </children>
 </Pane>
