--- a/src/main/resources/edu/wpi/teamb/views/CreditsPage.fxml
+++ b/src/main/resources/edu/wpi/teamb/views/CreditsPage.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <!--<AnchorPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="edu.wpi.teamb.controllers.CreditsController" prefHeight="400.0" prefWidth="600.0">-->
 <!--    -->
 <!--</AnchorPane>-->
-<?import io.github.palexdev.materialfx.controls.MFXButton?>
-<?import javafx.scene.shape.Rectangle?>
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #5f7ca4;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamb.controllers.CreditsPageController">
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #5f7ca4;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamb.controllers.CreditsController">
     <children>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#012d5a" height="50.0" layoutX="-162.0" stroke="TRANSPARENT" strokeType="INSIDE" width="1347.0" />
         <Text fill="WHITE" layoutX="-21.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Credits" textAlignment="CENTER" wrappingWidth="1164.103515625">
@@ -18,7 +22,7 @@
                 <Font name="System Bold" size="36.0" />
             </font>
         </Text>
-        <VBox layoutX="27.0" layoutY="96.0" prefHeight="138.0" prefWidth="125.0">
+        <VBox layoutX="164.0" layoutY="55.0" prefHeight="138.0" prefWidth="125.0">
             <children>
                 <Text fill="#ffffff" strokeType="OUTSIDE" strokeWidth="0.0" text="Images" textAlignment="CENTER" wrappingWidth="119.0">
                     <font>
@@ -42,23 +46,30 @@
                 </VBox>
             </children>
         </VBox>
-        <VBox layoutX="26.0" layoutY="319.0" prefHeight="285.0" prefWidth="125.0">
+        <VBox layoutX="26.0" layoutY="55.0" prefHeight="488.0" prefWidth="128.0">
             <children>
                 <Text fill="#ffffff" strokeType="OUTSIDE" strokeWidth="0.0" text="Icons" textAlignment="CENTER" wrappingWidth="127.083984375">
                     <font>
                         <Font size="20.0" />
-                    </font></Text>
+                    </font>
+            </Text>
                 <Separator prefWidth="200.0" />
                 <VBox prefHeight="200.0" prefWidth="100.0">
                     <children>
                         <Label fx:id="Cog_Wheel" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Cog Wheel" textFill="#ffffff" />
+                  <Label fx:id="conferenceRoom" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Conference Room" textFill="#ffffff" />
                         <Label fx:id="directions" alignment="CENTER" prefHeight="17.0" prefWidth="131.0" text="Directions" textFill="#ffffff" />
                         <Label fx:id="flower" alignment="CENTER" prefHeight="17.0" prefWidth="131.0" text="Flower" textFill="#ffffff" />
+                  <Label fx:id="flowerVase" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Flower Vase" textFill="#ffffff" />
+                  <Label fx:id="furnitureRequesst" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Furniture Request" textFill="#ffffff" />
                         <Label fx:id="helpIcon" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Help Icon" textFill="#ffffff" />
                         <Label fx:id="Home" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Home" textFill="#ffffff" />
                         <Label fx:id="LogOut" alignment="CENTER" prefHeight="17.0" prefWidth="128.0" text="Logout" textFill="#ffffff" />
                         <Label fx:id="map" alignment="CENTER" prefHeight="17.0" prefWidth="131.0" text="Map Icon" textFill="#ffffff" />
+                  <Label fx:id="mealRequest" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Meal Request" textFill="#ffffff" />
                         <Label fx:id="mealTimes" alignment="CENTER" prefHeight="17.0" prefWidth="133.0" text="Meal Times" textFill="#ffffff" />
+                  <Label fx:id="meeting" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Meeting" textFill="#ffffff" />
+                  <Label fx:id="officeSupplies" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Office Supplies" textFill="#ffffff" />
                         <Label fx:id="phoneCall" alignment="CENTER" prefHeight="17.0" prefWidth="128.0" text="Phone Call" textFill="#ffffff" />
                         <Label fx:id="reject" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Reject Icon" textFill="#ffffff" />
                         <Label fx:id="reply" alignment="CENTER" prefHeight="17.0" prefWidth="133.0" text="Reply Icon" textFill="#ffffff" />
@@ -66,14 +77,19 @@
                         <Label fx:id="sofa" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Sofa" textFill="#ffffff" />
                         <Label fx:id="street" alignment="CENTER" prefHeight="17.0" prefWidth="131.0" text="Street Sign" textFill="#ffffff" />
                         <Label fx:id="workspace" alignment="CENTER" prefHeight="17.0" prefWidth="132.0" text="Workspace" textFill="#ffffff" />
+                  <Label fx:id="edge" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Edge" textFill="#ffffff" />
+                  <Label fx:id="move" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Move" textFill="#ffffff" />
+                  <Label fx:id="node" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Node" textFill="#ffffff" />
+                  <Label fx:id="reset" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Reset" textFill="#ffffff" />
+                  <Label fx:id="tools" alignment="CENTER" prefHeight="17.0" prefWidth="130.0" text="Tools" textFill="#ffffff" />
                     </children>
                 </VBox>
             </children>
         </VBox>
         <Pane layoutX="218.0" layoutY="14.0" prefHeight="364.0" prefWidth="368.0" />
         <MFXButton fx:id="btnClose" layoutX="1163.0" layoutY="646.0" mnemonicParsing="false" text="Close" />
-        <ImageView fx:id="popup" fitHeight="617.0" fitWidth="828.0" layoutX="266.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true" />
-        <Text fill="#ffffff" layoutY="655.0" strokeType="OUTSIDE" strokeWidth="0.0" text="All Icon Images source from: https://www.flaticon.com/" textAlignment="CENTER" wrappingWidth="179.279296875">
+        <ImageView fx:id="popup" fitHeight="614.0" fitWidth="809.0" layoutX="301.0" layoutY="58.0" pickOnBounds="true" preserveRatio="true" />
+        <Text fill="#ffffff" layoutY="685.0" strokeType="OUTSIDE" strokeWidth="0.0" text="All Icon Images source from: https://www.flaticon.com/" textAlignment="CENTER" wrappingWidth="179.279296875">
             <font>
                 <Font name="System Bold" size="12.0" />
             </font>
